# openfused

./: .gitignore  A2A_COMPATIBILITY_DRAFT.md  CLAUDE.md  CLAUDE_CODE_OPUS_NOTES.md  CONTRIBUTING.md  README.md  ROADMAP.md  docker-compose.yml  llms.txt  package-lock.json  package.json  server.json  wisp-profile.md
.github/workflows/: publish.yml
daemon/: Cargo.toml  Dockerfile
daemon/src/: main.rs  server.rs  store.rs  tail.rs  types.rs
demo/: docker-compose.yml
docs/: A2A_FILE_CONTRACT.md  v0.6-handle-refactor.md
drafts/: hn-post.md
hosted/: wrangler.toml
hosted/src/: dispatch.ts  index.ts  provision.ts
mailbox/: package.json  wrangler.toml
mailbox/src/: index.ts
mesh/claude-code/: CONTEXT.md
mesh/codex/: CONTEXT.md  PROFILE.md  SOUL.md
mesh/workspace/: CHARTER.md  CONTEXT.md
mesh/workspace/_broadcast/: 2026-03-26_workspace-setup.md
mesh/workspace/tasks/: 2026-03-26_a2a-phase1-daemon-routes.md  2026-03-26_a2a-store-helpers.md  2026-03-28_wasm-demo.md
rust/: Cargo.toml  README.md
rust-port/openfuse-cli/: Cargo.toml
rust-port/openfuse-cli/src/: main.rs  watch.rs
rust-port/openfuse-core/src/: crypto.rs  lib.rs  store.rs
rust-port/openfuse-core/templates/: CHARTER.md  CONTEXT.md
rust-port/openfuse-daemon/: Dockerfile
rust/src/: main.rs  registry.rs  store.rs  sync.rs
scripts/: release.sh
site/: about.html  contributing.html  index.html  robots.txt  security.html  signup.html  sitemap.xml
skill/: SKILL.md
src/: cli.ts  crypto.ts  mcp.ts  registry.ts  store.ts  sync.ts  validity.test.ts  validity.ts  wasm-core.ts  watch.ts
templates/: CHARTER.md  PROFILE.md
worker/src/: index.ts
