[package]
name = "openfused"
version = "0.3.13"
edition = "2021"
description = "FUSE daemon for OpenFused — encrypted agent-to-agent messaging"
license = "MIT"
repository = "https://github.com/openfused/openfused"

[dependencies]
fuser = "0.15"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive"] }
ed25519-dalek = { version = "2", features = ["rand_core"] }
rand = "0.8"
base64 = "0.22"
hex = "0.4"
notify = "7"
tracing = "0.1"
tracing-subscriber = "0.3"
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
axum = { version = "0.8", features = ["json"] }
chrono = "0.4"
tower-http = { version = "0.6", features = ["cors"] }
libc = "0.2"

[profile.release]
lto = true
strip = true
panic = "abort"
