[package]
name = "openfuse"
version = "0.3.12"
edition = "2021"
description = "The file protocol for AI agent context — sync, encrypt, sign"
license = "MIT"
repository = "https://github.com/openfused/openfused"
homepage = "https://github.com/openfused/openfused"
keywords = ["ai", "agent", "context", "messaging", "llm"]

[[bin]]
name = "openfuse"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
nanoid = "0.4"
notify = "7"
ed25519-dalek = { version = "2", features = ["rand_core"] }
rand = "0.8"
base64 = "0.22"
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1"
hex = "0.4"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
age = "0.11"
sha2 = "0.10"
