[package]
name = "openfused"
version = "0.4.2"
edition = "2021"
description = "CLI for OpenFused — the file protocol for AI agent context"
license = "MIT"
repository = "https://github.com/openfused/openfused"

[[bin]]
name = "openfused"
path = "src/main.rs"

[dependencies]
openfused-core = { path = "../openfuse-core", version = "0.4" }
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
nanoid = "0.4"
notify = "7"
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
regex = "1"
